--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -152,16 +152,26 @@
           </div>
 
           <!-- SHARE -->
-          <div ng-hide="listShareEditorOpen" class="group-mixed">
+          <div ng-if="mode !== 'extrinsic'" ng-hide="listShareEditorOpen" class="group-mixed">
             <a href class="group-mixed--middle link-search-result downplayed"
-              ng-click="openListShareEditor(undefined, 'outward')">
+              ng-click="openListShareEditor()">
               <span class="text-field--title">share list&hellip;</span>
             </a>
           </div>
 
-          <div ng-hide="listShareEditorOpen" ng-repeat="sharedTo in sharedToList" class="group-mixed">
+          <div ng-if="mode === 'extrinsic'" class="group-mixed">
+            <a href class="group-mixed--middle link-search-result" ng-click="openListShareEditor(sharedByList)">
+              <span class="text-field--title" ng-bind="sharedByList.email + ', ' + sharedByList.accessText"></span>
+            </a>
+            <div class="group-mixed--right">
+              <span class="text-field--label">owner</span>
+            </div>
+          </div>
+
+          <div ng-if="mode !== 'extrinsic'" ng-hide="listShareEditorOpen" ng-repeat="sharedTo in sharedToList"
+            class="group-mixed">
             <a href class="group-mixed--middle link-search-result"
-              ng-click="openListShareEditor(sharedTo, 'outward')">
+              ng-click="openListShareEditor(sharedTo)">
               <span class="text-field--title"
                 ng-bind="sharedTo.email + ', ' + sharedTo.accessText + ', ' + sharedTo.acceptStatus">
               </span>
@@ -175,7 +185,7 @@
           <div ng-if="listShareEditorOpen" class="swiper-no-swiping animate-fade-in"
             editable-field-container="auto">
 
-            <div class="group-mixed vertically-centered">
+            <div ng-if="mode !== 'extrinsic'" class="group-mixed vertically-centered">
               <div class="group-mixed--middle">
                 <input style="display: block; height: 22px; line-height: 22px;"
                   type="email" ng-model="shareEditor.data.email" placeholder="enter email&#8230;"
@@ -186,7 +196,7 @@
               </div>
             </div>
 
-            <div ng-if="shareEditor.mode === 'outward'" class="group-mixed">
+            <div ng-if="mode !== 'extrinsic'" class="group-mixed">
               <div class="group-mixed--left">
                 <input type="checkbox" ng-model="shareEditor.data.access" ng-true-value="2" ng-false-value="1"
                   icon-checkbox="'sharedToAccess'"/>
@@ -197,14 +207,14 @@
             </div>
 
             <div class="group-symmetrical">
-              <a href ng-if="shareEditor.mode === 'outward' && !shareEditor.data.accepted"
+              <a href ng-if="mode !== 'extrinsic' && !shareEditor.data.accepted"
                 class="group-symmetrical--left"
                 ng-class="(!shareEditor.resendPending && !shareEditor.resendResolved) ? 'highlighted' : 'link-disable downplayed'"
                 swiper-click="resendShareList()">
                 <span ng-bind="getShareListResendStatusText()"></span>
               </a>
               <a href class="group-symmetrical--right" swiper-click="removeShareList()">
-                <span class="text-remove">unshare</span>
+                <span class="text-remove" ng-bind="mode === 'extrinsic' ? 'remove' : 'unshare'"></span>
               </a>
             </div>
 
