Fixed description hyphenation

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -46,7 +46,7 @@
             ng-bind="listPickerOpen ? 'list' : 'share'">
           </span>
           <div ng-if="descriptionFocused" class="text-field--label-multi-row">
-            <span ng-bind="'de' + (columns === 1 ? '-\n' : '') + 'scription'" class="text-field--label-bold"></span>
+            <span ng-bind="'descrip' + (columns === 1 ? '-\n' : '') + 'tion'" class="text-field--label-bold"></span>
           </div>
         </div>
 
