--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -45,7 +45,7 @@
           <span ng-if="isPickerOpen()" class="text-field--label-bold" ng-bind="getPropertyNameInEdit()">
           </span>
           <div ng-if="taskDescriptionFocused" class="text-field--label-multi-row">
-            <span ng-bind="'de' + (columns === 1 ? '-\n' : '') + 'scription'" class="text-field--label-bold"></span>
+            <span ng-bind="'descrip' + (columns === 1 ? '-\n' : '') + 'tion'" class="text-field--label-bold"></span>
           </div>
         </div>
 
