--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -30,7 +30,7 @@
 
         <div ng-if="descriptionFocused" class="group-symmetrical--right">
           <div class="text-field--label-multi-row">
-            <span ng-bind="'de' + (columns === 1 ? '-\n' : '') + 'scription'"
+            <span ng-bind="'descrip' + (columns === 1 ? '-\n' : '') + 'tion'"
               class="text-field--label-bold">
             </span>
           </div>
