--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -4,7 +4,7 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top height-large--bottom" swiper-prevent>
 
-        <a href ng-hide="isPickerOpen() || listShareEditorOpen"
+        <a href ng-hide="isSubEditorOpen() || listShareEditorOpen"
           class="group-symmetrical--left link-navigation active highlighted sorting-hide"
           swiper-click="endListEdit()">
           <span class="text-navigation-back"
@@ -13,9 +13,9 @@
           </span>
         </a>
 
-        <a href ng-if="isPickerOpen() || listShareEditorOpen" class="group-symmetrical--left highlighted"
-           ng-click="propertyEditDone()" editable-field-container="auto">
-          <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
+        <a href ng-if="isSubEditorOpen() || listShareEditorOpen" class="group-symmetrical--left highlighted"
+           ng-click="subEditorDone()" editable-field-container="auto">
+          <span class="text-edit" ng-bind="hasSubEditorEdited() ? 'save' : 'done'"></span>
         </a>
 
         <div ng-show="isListPropertyInEdit() || !isFirstSlide('listEditor')"
@@ -105,10 +105,10 @@
               list-picker-clear="closeListPickerAndClearListFromItem(thisList, list)"
               list-picker-get-selected="list.trans.list"
               list-picker-get-this-list="list"
-              list-picker-register-save-new-list-callback="registerPropertyEditDoneCallback(saveNewList)"
-              list-picker-unregister-save-new-list-callback="unregisterPropertyEditDoneCallback()"
-              list-picker-register-is-edited-callback="registerIsPropertyEdited(isEdited)"
-              list-picker-unregister-is-edited-callback="unregisterIsPropertyEdited()">
+              list-picker-register-save-new-list-callback="registerSubEditorDoneCallback(saveNewList)"
+              list-picker-unregister-save-new-list-callback="unregisterSubEditorDoneCallback()"
+              list-picker-register-is-edited-callback="registerHasSubEditorEditedCallback(isEdited)"
+              list-picker-unregister-is-edited-callback="unregisterHasSubEditorEditedCallback()">
             </div>
           </div>
 
