--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -4,7 +4,7 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top height-large--bottom" swiper-prevent>
 
-        <a href ng-hide="isSubEditorOpen() || listShareEditorOpen"
+        <a href ng-hide="isSubEditorOpen()"
           class="group-symmetrical--left link-navigation active highlighted sorting-hide"
           swiper-click="endListEdit()">
           <span class="text-navigation-back"
@@ -13,7 +13,7 @@
           </span>
         </a>
 
-        <a href ng-if="isSubEditorOpen() || listShareEditorOpen" class="group-symmetrical--left highlighted"
+        <a href ng-if="isSubEditorOpen()" class="group-symmetrical--left highlighted"
            ng-click="subEditorDone()" editable-field-container="auto">
           <span class="text-edit" ng-bind="hasSubEditorEdited() ? 'save' : 'done'"></span>
         </a>
