Added function for editor title visibility

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -18,7 +18,7 @@
           <span class="text-edit" ng-bind="hasSubEditorEdited() ? 'save' : 'done'"></span>
         </a>
 
-        <div ng-if="isListPropertyInEdit() || !isFirstSlide('listEditor')"
+        <div ng-show="isEditorHeaderTitleVisible()"
           ng-style="{maxWidth: calculateTitleWidth()}"
           class="group-symmetrical--middle width-large text-heading-primary--outer primary">
           <div class="text-heading-primary--inner">
