Changed descriptionFocused to more generic focusedTextProperty

--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -10,7 +10,7 @@
           ng-bind="isTagEdited() && !tag.trans.deleted ? 'save' : 'back'"></span>
         </a>
 
-        <div ng-show="descriptionFocused" ng-style="{maxWidth: calculateTitleWidth()}"
+        <div ng-show="focusedTextProperty === 'description'" ng-style="{maxWidth: calculateTitleWidth()}"
           class="group-symmetrical--middle width-large text-heading-primary--outer primary">
           <div class="text-heading-primary--inner">
             <span class="text-heading-primary" data-prefix="{{getPrefix(tag)}}"
@@ -20,15 +20,15 @@
           </div>
         </div>
 
-        <a href ng-if="!tag.trans.deleted" ng-hide="descriptionFocused" class="group-symmetrical--right" swiper-click="deleteTagInEdit()" >
+        <a href ng-if="!tag.trans.deleted" ng-hide="focusedTextProperty === 'description'" class="group-symmetrical--right" swiper-click="deleteTagInEdit()" >
           <span class="icon-trash"></span>
         </a>
-        <a href ng-if="tag.trans.deleted" ng-hide="descriptionFocused" class="group-symmetrical--right link-navigation highlighted active"
+        <a href ng-if="tag.trans.deleted" ng-hide="focusedTextProperty === 'description'" class="group-symmetrical--right link-navigation highlighted active"
           swiper-click="undeleteTagInEdit()">
           <span class="text-navigation">restore</span>
         </a>
 
-        <div ng-if="descriptionFocused" class="group-symmetrical--right">
+        <div ng-if="focusedTextProperty === 'description'" class="group-symmetrical--right">
           <div class="text-field--label-multi-row">
             <span ng-bind="'descrip' + (columns === 1 ? '-\n' : '') + 'tion'"
               class="text-field--label-bold">
@@ -44,7 +44,7 @@
     <div class="container-content" drawer-override-aisle="right" ng-init="drawerAisleInitialized = true">
 
       <!-- TITLE -->
-      <div ng-hide="descriptionFocused">
+      <div ng-hide="focusedTextProperty === 'description'">
         <label for="tagEditorTitlebarTitle" class="text-prefixed--label large"
           ng-bind="tag.trans.tagType === 'context' ? '@' : '#'"></label>
         <div class="text-prefixed--outer">
@@ -59,8 +59,8 @@
 
       <!-- DESCRIPTION -->
       <textarea ng-if="drawerAisleInitialized" id="ignoreSnap" ng-model="tag.trans.description"
-        input-model-validator ng-trim="false" ng-focus="setDescriptionFocus(true, 'tagEditor')"
-        ng-blur="setDescriptionFocus(false, 'tagEditor')" msd-elastic
+        input-model-validator ng-trim="false" ng-focus="setTextPropertyFocus('description', true)"
+        ng-blur="setTextPropertyFocus('description', false)" msd-elastic
         placeholder="enter description&#8230;" maxlength="1024" autocapitalize="none" autocorrect="off">
       </textarea>
 
