--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -4,7 +4,7 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top height-large--bottom" swiper-prevent>
 
-        <a href ng-hide="isSubEditorOpen()"
+        <a href ng-hide="isPropertyInEdit()"
           class="group-symmetrical--left link-navigation active highlighted sorting-hide"
           swiper-click="endListEdit()">
           <span class="text-navigation-back"
@@ -13,9 +13,9 @@
           </span>
         </a>
 
-        <a href ng-if="isSubEditorOpen()" class="group-symmetrical--left highlighted"
-           ng-click="subEditorDone()" editable-field-container="auto">
-          <span class="text-edit" ng-bind="hasSubEditorEdited() ? 'save' : 'done'"></span>
+        <a href ng-if="isPropertyInEdit()" class="group-symmetrical--left highlighted"
+           ng-click="subEditorDone()" editable-field-container="{{getPropertyInEditContainerStatus()}}">
+          <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
 
         <div ng-show="isEditorHeaderTitleVisible()"
@@ -81,11 +81,12 @@
           </div>
 
           <!-- URL -->
-          <div ng-hide="isPropertyInEdit()" class="row-vertically-centered with-textarea">
-            <textarea class="text-metadata" ng-model="list.trans.link" input-model-validator ng-trim="false" msd-elastic
-              maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
-            </textarea>
-          </div>
+          <textarea ng-if="drawerAisleInitialized" ng-hide="isOtherPropertyInEdit('url')"
+            class="text-metadata" id="ignoreSnap" ng-model="list.trans.link" input-model-validator
+            ng-focus="setTextPropertyFocus('url', true)"
+            ng-blur="setTextPropertyFocus('url', false)" ng-trim="false" msd-elastic editable-field
+            maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
+          </textarea>
 
           <!-- LIST -->
           <div ng-if="!listIsParent(list)" ng-hide="isPropertyInEdit()" class="group-mixed">
@@ -119,13 +120,13 @@
           </div>
 
           <!-- DESCRIPTION -->
-          <textarea ng-if="drawerAisleInitialized" ng-hide="listPickerOpen" id="ignoreSnap"
+          <textarea ng-if="drawerAisleInitialized" ng-hide="isOtherPropertyInEdit('description')" id="ignoreSnap"
             ng-model="list.trans.description" input-model-validator ng-trim="false"
             ng-focus="setTextPropertyFocus('description', true)"
             ng-blur="setTextPropertyFocus('description', false)"
             editable-field msd-elastic placeholder="enter description&#8230;" maxlength="1024"
             autocapitalize="none" autocorrect="off">
-         </textarea>
+          </textarea>
 
         </div>
         <footer ng-hide="isPropertyInEdit()" class="container-content--after editor-footer">
