Show toaster when clicking read only property in list editor i.e. when the list is shared to the user. Fix LESS for full-height textareas to take effect only on elements without readonly attribute.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -68,6 +68,7 @@
               <div class="group-mixed--middle">
                 <textarea class="text-heading-primary large" ng-model="list.trans.title"
                   input-model-validator ng-trim="false" msd-elastic ng-keydown="listTitlebarTextKeyDown($event)"
+                  ng-click="listTitlebarClick()" ng-readonly="foreignOwner"
                   editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
                   placeholder="enter list title&#8230;" maxlength="128" autocapitalize="none" autocorrect="off">
                 </textarea>
@@ -85,7 +86,8 @@
           <textarea ng-if="drawerAisleInitialized" ng-hide="isOtherPropertyInEdit('url')"
             class="text-metadata" id="ignoreSnap" ng-model="list.trans.link" input-model-validator
             ng-focus="setTextPropertyFocus('url', true)"
-            ng-blur="setTextPropertyFocus('url', false)" ng-trim="false" msd-elastic editable-field
+            ng-blur="setTextPropertyFocus('url', false)"
+            ng-click="listUrlClick()" ng-readonly="foreignOwner" ng-trim="false" msd-elastic editable-field
             maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
           </textarea>
 
@@ -125,6 +127,7 @@
             ng-model="list.trans.description" input-model-validator ng-trim="false"
             ng-focus="setTextPropertyFocus('description', true)"
             ng-blur="setTextPropertyFocus('description', false)"
+            ng-click="listDescriptionClick()" ng-readonly="foreignOwner"
             editable-field msd-elastic placeholder="enter description&#8230;" maxlength="1024"
             autocapitalize="none" autocorrect="off">
           </textarea>
