--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -84,10 +84,10 @@
 
           <!-- URL -->
           <textarea ng-if="drawerAisleInitialized" ng-hide="isOtherPropertyInEdit('url')"
-            class="text-metadata" id="ignoreSnap" ng-model="list.trans.link" input-model-validator
-            ng-focus="setTextPropertyFocus('url', true)"
-            ng-blur="setTextPropertyFocus('url', false)"
-            ng-click="listUrlClick()" ng-readonly="foreignOwner" ng-trim="false" msd-elastic editable-field
+            id="ignoreSnap" class="text-metadata" ng-model="list.trans.link" input-model-validator
+            ng-trim="false"
+            ng-focus="setTextPropertyFocus('url', true)" ng-blur="setTextPropertyFocus('url', false)"
+            ng-click="listUrlClick()" ng-readonly="foreignOwner" msd-elastic
             maxlength="2000" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
           </textarea>
 
@@ -128,7 +128,7 @@
             ng-focus="setTextPropertyFocus('description', true)"
             ng-blur="setTextPropertyFocus('description', false)"
             ng-click="listDescriptionClick()" ng-readonly="foreignOwner"
-            editable-field msd-elastic placeholder="enter description&#8230;" maxlength="1024"
+            msd-elastic placeholder="enter description&#8230;" maxlength="1024"
             autocapitalize="none" autocorrect="off">
           </textarea>
 
